# glome

./: .gitignore  .gitlab-ci.yml  .gitmodules  .ycm_extra_conf.py  4dmath.hpp  AUTHORS  Ata-12-05-11.txt  CMakeLists.txt  Doxyfile.cfg  Makefile  Makefile.am  README  TODO  aminclude.am  autogen.sh  configure.ac  input.cpp  input.hpp  main.cpp  matrix4.hpp  minimap.cpp  minimap.hpp  minimap_proj.glsl  object.hpp  projectile.cpp  projectile.hpp  randomcube.hpp  shader.cpp  shader.hpp  ship.cpp  ship.hpp  vector4.hpp
data/: Makefile.am  asteroid.blend  asteroid.wire  destroyer.blend  destroyer.gun  destroyer.wire  hunter.blend  hunter.gun  hunter.wire  minimap.frag  minimap.vert  nave0.blend  nave1.blend  teste.vert  ufo.blend  ufo.gun  ufo.wire
data/art/: hunter.blend  hunter.wire  ufo.wire
data/controllers/: input.config
data/models/: Makefile.am  destroyer.blend  destroyer.wire  hunter.wire  ufo.blend  ufo.wire
data/shaders/: dustfield.vert  dustfield_fog.frag  fire.frag  fire.vert  fog.frag  hud.vert  map_stuff.vert  map_supernova.vert  minimap.frag  minimap.vert  no_texture.frag  point_texture.frag  projectile.vert  supernova.frag  supernova.vert  texture.frag  world.frag  world.vert
data/shaders/common/: luminance_alpha_texture.frag  no_texture.frag  quaternion.vert
data/shaders/minimap/: hud.vert  map_stuff.vert  map_supernova.vert  minimap.frag  minimap.vert
data/shaders/world/: dustfield.vert  dustfield_fog.frag  fire.vert  fog.frag  modelview.vert  noise3D.frag  point_texture.frag  projectile.vert  spaghetti_frag.frag  spaghetti_frag.vert  supernova.frag  supernova.geom  supernova.vert  world.frag  world.vert  world_fog.frag
data/sound/: spaghetti.opus
docker/: README  fikalab.Dockerfile
m4/: blender.m4  opengl.m4
scripts/: gun_export.py  mesh_export.py  navigna_export.py  probabilities-calculator.py  stats-tuner.py
src/: 4dmath.cpp  Hunter0.wire  Makefile  Makefile.am  asteroid.cpp  asteroid.hpp  button.cpp  button.hpp  client.cpp  client.hpp  config.hpp  config.hpp.in  drawable.cpp  drawable.hpp  game.cpp  game.hpp  hunter.wire  init_gl.cpp  init_gl.hpp  input.cpp  input.hpp  jsinput.cpp  kbinput.cpp  kbinput.hpp  main.cpp  main.hpp  matrix4.hpp  menu.cpp  menu.hpp  meridian.cpp  mesh.cpp  mesh.hpp  minimap.cpp  minimap.hpp  minimap_proj.glsl  native.hpp  net_input.cpp  net_input.hpp  net_world.cpp  net_world.hpp  (+25 more)
src/common/: 4dmath.hpp  CMakeLists.txt  Effect.cpp  Effect.hpp  Makefile.am  Sound.cpp  Sound.hpp  Source.cpp  Source.hpp  ai_controller.cpp  ai_controller.hpp  asteroid.cpp  asteroid.hpp  audio.cpp  audio.hpp  audio_effect.cpp  audio_effect.hpp  audio_listener.cpp  audio_listener.hpp  audio_sound.hpp  audio_source.cpp  audio_source.hpp  audio_world.cpp  audio_world.hpp  buffer_object.hpp  camera.cpp  camera.hpp  client.cpp  collidable.hpp  color.cpp  color.hpp  config.hpp.in  controller.cpp  controller.hpp  controller_local.cpp  controller_local.hpp  controller_remote.cpp  controller_remote.hpp  data_file.cpp  data_file.hpp  (+128 more)
src/sdl/: CMakeLists.txt  Makefile.am  button.cpp  button.hpp  events.hpp  fatal_error.cpp  input.cpp  input.hpp  input_callback.hpp  jsinput.cpp  jsinput.hpp  kbinput.cpp  kbinput.hpp  menu.cpp  menu.hpp  native.hpp  net_input.cpp  popup_window.cpp  popup_window.hpp  sdl_main.cpp
toolchain/: clang.cmake  mingw-w64-x86_64.cmake
