INCLUDES = \
	-I$(top_srcdir)/src/sdl \
	$(SDL_CFLAGS) \
	$(OPENGL_CFLAGS) \
	$(BOOST_CPPFLAGS) \
	-I$(includedir)

noinst_LIBRARIES = libcommon.a

libcommon_a_SOURCES = \
	camera.cpp \
	controller.cpp \
	controller_local.cpp \
	controller_remote.cpp \
	effect.cpp \
	engine.cpp \
	fire.cpp \
	game.cpp \
	math.cpp \
	matrix4.cpp \
	meridian.cpp \
	mesh.cpp \
	minimap.cpp \
	object.cpp \
	options.cpp \
	particle_system.cpp \
	projectile.cpp \
	randomcube.cpp \
	renderer.cpp \
	shader.cpp \
	ship_ai.cpp \
	ship_controller.cpp \
	ship.cpp \
	sound.cpp \
	source.cpp \
	spaghetti.cpp \
	textures.cpp \
	vector4.cpp \
	world_dummy.cpp
