INCLUDES = \
	-I$(top_srcdir)/src/sdl \
	$(SDL_CFLAGS) \
	$(OPENGL_CFLAGS) \
	$(BOOST_CPPFLAGS) \
	-I$(includedir)

noinst_LIBRARIES = libcommon.a

libcommon_a_SOURCES = \
	camera.cpp \
	controller_local.cpp \
	controller_remote.cpp \
	destroyer.cpp \
	drawable.cpp \
	dustfield.cpp \
	effect.cpp \
	fire.cpp \
	game.cpp \
	math.cpp \
	matrix4.cpp \
	meridian.cpp \
	mesh.cpp \
	minimap.cpp \
	object.cpp \
	options.cpp \
	particle_system.cpp \
	projectile.cpp \
	random.cpp \
	randomcube.cpp \
	renderer.cpp \
	shader.cpp \
	ai_controller.cpp \
	ship_controller.cpp \
	ship_stats.cpp \
	ship.cpp \
	simplexnoise1234.cpp \
	sound.cpp \
	source.cpp \
	spaghetti.cpp \
	supernova.cpp \
	textures.cpp \
	vector4.cpp \
	world_dummy.cpp
